--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL='mongodb://localhost:27017/expensetracker'
+MONGO_URL='mongodb+srv://dev1:6V2g7O3K8NTYc951@db-mongodb-cschool-83895681.mongo.ondigitalocean.com/admin?tls=true&authSource=admin&replicaSet=db-mongodb-cschool'
 JWT_KEY=Teman!@#123Expense
